2002-12-04  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/DPSOperators.h (DPSPrintf): Remove inline
	attribute which caused compiler errors on FreeBSD (patch from Pete
	French <pete@twisted.org.uk>).

2002-12-05  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m
	In [TIFFRepresentationUsingCompression:factor:] set extraSamples
	and correct compression type if 0.
	* Source/NSImageView.m
	Implement dragging of images.

2002-12-02  Adam Fedor  <fedor@gnu.org>

	* Model/GMAppKit.m, Model/GMArchiver.m, Model/IBClasses.m,
	Model/IMConnectors.m, Model/IMCustomObject.m, Model/IMLoading.m,
	Model/Translator.m: Include model headers from gnustep/gui
	not AppKit.
	* Model/GNUmakefile: Install headers in gnustep/gui

2002-11-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Model/IMConnectors.m: Update ivar setting code.

2002-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundleAdditions.m: Quick hack for setting ivars.

2002-11-27  Adam Fedor  <fedor@gnu.org>

	* Source/NSTabView.m ([NSTabView -selectedTabViewItem]): Check
	that the array count is > 0

2002-11-24  Adam Fedor  <fedor@gnu.org>

	* Tools/example.m: Include NSProcessInfo.h 

2002-11-24  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSSavePanel.h
	* Headers/gnustep/gui/NSOpenPanel.h
	* Source/NSSavePanel.m
	* Source/NSOpenPanel.m
	Added new MacOSX methods.

2002-11-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBezierPath.m
	Corrected [GSBezierPath appendBezierPath:] to check the class of
	the parameter and to keep the isFlat flag in sync.
	* TextConverters/RTF/RTFConsumer.m
	GSRTFregisterFont() handle fontnames with and without trailing ';'.
	* TextConverters/RTF/rtfGrammer.y
	Documented how to compile with recent bison releases.
	Removed one conflict and an unneeded terminal.
	Allow for additional blocks in font definition.
	* TextConverters/RTF/rtfGrammer.tab.h
	Regenerated with bison 1.35
	* TextConverters/RTF/rtfGrammer.tab.c